# Velum

./: README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  snyk.yml
backend/: main.py  pyproject.toml
demo/: MITRE_ATLAS.md  attack.py  defense.py
